--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <main>
@@ -13,13 +14,13 @@
       <label>
         <div>Enter Hex, RGB, HSL, or named values for colors (<a href="https://github.com/bgrins/TinyColor#accepted-string-input">more info on accepted color formats</a>), one per line:</div>
         <textarea id="colors" rows="5" cols="33">
-          Purple
-          hsl(0, 100%, 50%)
-          #90ee90
-          white
+Purple
+hsl(0, 100%, 50%)
+#90ee90
+white
         </textarea>
       </label>
-      <button>Calculate Contrasts</button>
+      <button>Get Contrast Grid</button>
     </form>
 
     <div class="table-container"></div>
