Ability to specify different x and y axis colors.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
       <h2>Enter Colors</h2>
       <label>
         <div>Enter Hex, RGB, HSL, or named values for colors (<a href="https://github.com/bgrins/TinyColor#accepted-string-input">more info on accepted color formats</a>), one per line:</div>
-        <textarea id="colors" rows="5" cols="33">
+        <textarea class="color-input-1" rows="5" >
 Purple
 hsl(0, 100%, 50%)
 #90ee90
 white
+        </textarea>
+
+        <textarea class="color-input-2" rows="5">
+orange
+green
+pink
+
         </textarea>
       </label>
       <button>Get Contrast Grid</button>
