Adding some attribution

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
           <div>Y axis colors (optional)</div>
           <textarea class="color-input-2" rows="5"></textarea>
         </label>
-        <button>Get Contrast Grid</button>
+        <button>Build Contrast Grid</button>
       </form>
       <div class="table-container"></div>
     </div>
     <footer>
       <p>The code for this website is available at <a href="https://github.com/mherchel/contrast-grid">https://github.com/mherchel/contrast-grid</a>.</p>
+      <p>The concept of this site is inspired by <a href="https://contrast-grid.eightshapes.com/">Eightshapes' Contrast Grid </a>, as well as <a href="https://metageeky.github.io/contrast_table_analyzer/contrast-table.html">Kate Deibel's Contrast Table Analyzer</a>.</p>
     </footer>
   </main>
   <script src="/tinycolor-min.js"></script>
