--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Color Contrast Grid</title>
+  <meta name="description" content="Free tool that generates a color grid showing contrast ratios for each color pairing.">
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
