--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Color Contrast Grid</title>
-  <meta name="description" content="Free tool that generates a color grid showing contrast ratios for each color pairing.">
+  <title>Color Contrast Grid - Create a color grid showing contrast ratios</title>
+  <meta name="description" content="Free lightweight online tool that generates a color grid showing contrast ratios for each color pairing.">
   <link rel="stylesheet" href="/style.css">
+  <meta property="og:image" content="/screenshot.webp" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:description" content="Free lightweight online tool that generates a color grid showing contrast ratios for each color pairing." />
+  <meta name="twitter:site" content="@mherchel" />
+  <meta name="twitter:title" content="ContrastGrid - Create a color grid showing contrast ratios" />
+  <meta name="twitter:image:alt" content="Screenshot of contrast grid in action" />
+  <meta name="twitter:image" content="/screenshot.webp" />
 </head>
 <body>
   <header>
