Example grid markup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
       </label>
       <button>Build Contrast Grid</button>
     </form>
-    <div class="table-container"></div>
+    <div class="table-container">
+      <div class="placeholder">Enter colors to the left. <a href="/?xAxisColors=%23000%7C%230d1214%7Chsl%28210%2C+8%25%2C+5%25%29%7C%23171e23%7C%23313637%7C%236e7172%7C%235d7585%7C%237d919d%7C%237e96a7%7C%23afb8be%7Cgray%7C%23d7e1e8%7C%23e3e3e5%7C%23e7edf1%7C%23f1f4f7%7C%23f7f9fa">Click here for an example grid</a>.</div>
+    </div>
   </main>
   <footer>
     <p>The code for this website is available at <a href="https://github.com/mherchel/contrast-grid">https://github.com/mherchel/contrast-grid</a>.</p>
