Logo and minor fixes

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <meta name="twitter:title" content="ContrastGrid - Create a color grid showing contrast ratios" />
   <meta name="twitter:image:alt" content="Screenshot of contrast grid in action" />
   <meta name="twitter:image" content="https://contrastgrid.com/screenshot.webp" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg">
 </head>
 <body>
   <header>
-    <h1><a href="/">Build a Color Contrast Grid</a></h1>
+    <h1><a href="/"><img src="/logo.svg" width="27" height="27" alt=""> Build a Color Contrast Grid</a></h1>
     <p>Enter one color per line (this can be almost any format including Hex, RGB, HSL, HSLA, etc). If you choose to not fill in the "Y axis colors" field, we will compare the X axis against itself.</p>
   </header>
   <main class="layout-container">
