More RWD tweaks

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </form>
     <div class="table-container">
       <div class="placeholder">
-        Enter colors to the left. Don't have your own colors? Checkout some of our sample color grids:
+        Enter colors <span class="show-large">to the left</span><span class="show-small">above</span>. Don't have your own colors? Checkout some of our sample color grids:
         <ul>
           <li><a href="/?xAxisColors=%23000%7C%230d1214%7Chsl%28210%2C+8%25%2C+5%25%29%7C%23171e23%7C%23313637%7C%236e7172%7C%235d7585%7C%237d919d%7C%237e96a7%7C%23afb8be%7Cgray%7C%23d7e1e8%7C%23e3e3e5%7C%23e7edf1%7C%23f1f4f7%7C%23f7f9fa">Gray Palette</a></li>
           <li><a
