Move around some CSS

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Color Contrast Grid - Create a color grid showing contrast ratios</title>
   <meta name="description" content="Free lightweight online tool that generates a color grid showing contrast ratios for each color pairing.">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/form.css">
   <link rel="stylesheet" href="/css/table.css">
   <meta property="og:image" content="https://contrastgrid.com/screenshot.webp" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description" content="Free lightweight online tool that generates a color grid showing contrast ratios for each color pairing." />
-  <meta name="twitter:site" content="@mherchel" />
+  <meta name="twitter:site" content="@mikeherchel" />
   <meta name="twitter:title" content="ContrastGrid - Create a color grid showing contrast ratios" />
   <meta name="twitter:image:alt" content="Screenshot of contrast grid in action" />
   <meta name="twitter:image" content="https://contrastgrid.com/screenshot.webp" />
