--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <form class="color-input-form">
       <label>
         <div>X axis colors (required)</div>
-        <textarea placeholder="hsl(202, 79%, 50%)&#10;#ff0033&#10;rebeccapurple" class="color-input-1" rows="5" required></textarea>
+        <textarea placeholder="hsl(202, 79%, 50%)&#10;#ff0033&#10;rebeccapurple" class="color-input-x" rows="5" required></textarea>
       </label>
       <label>
         <div>Y axis colors (optional)</div>
-        <textarea class="color-input-2" rows="5"></textarea>
+        <textarea class="color-input-y" rows="5"></textarea>
       </label>
       <button>Build Contrast Grid</button>
     </form>
