--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         <div>X axis colors (required)</div>
         <textarea placeholder="hsl(202, 79%, 50%)&#10;#ff0033&#10;rebeccapurple" class="color-input-x" rows="5" required></textarea>
       </label>
+      <button class="button-reverse" type="button" aria-label="Reverse X and Y axis data">↑↓</button>
       <label>
         <div>Y axis colors (optional)</div>
         <textarea class="color-input-y" rows="5"></textarea>
       </label>
-      <button>Build Contrast Grid</button>
+      <button class="button-submit">Build Contrast Grid</button>
     </form>
     <div class="table-container">
       <div class="placeholder">
