--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
         <div>Y axis colors (optional)</div>
         <textarea class="color-input-y" rows="5"></textarea>
       </label>
+      <label for="contrast">Contrast</label>
+      <input id="contrast" name="contrast" type="range" min="1" max="21" step="0.5" value="7" list="wcag">
+      <!-- Only really works in Chromium -->
+      <datalist id="wcag">
+        <option value="1">1</option>
+        <option value="3">Large</option>
+        <option value="4.5">Text</option>
+        <option value="7">AAA</option>
+        <option value="21">21</option>
+      </datalist>
+      <div class="datalist-buttons">
+        <button type="button" data-value="1">1</button>
+        <button type="button" data-value="3">Large</button>
+        <button type="button" data-value="4.5">Text</button>
+        <button type="button" data-value="7">AAA</button>
+        <button type="button" data-value="21">21</button>
+      </div>
+      <output class="visually-hidden" name="contrastValue" for="contrast">7</output>
+      <div>
+        <input type="checkbox" name="hideBelow" id="hideBelow">
+        <label for="hideBelow">Hide Colors Below <span id="contrastBelow">7</span></label>
+      </div>
       <button class="button-submit">Build Contrast Grid</button>
     </form>
     <div class="table-container">
