Add checkbox styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button type="button" data-value="21">21</button>
       </div>
       <output class="visually-hidden" name="contrastValue" for="contrast">7</output>
-      <div>
+      <div class="checkbox-flex">
         <input type="checkbox" name="hideBelow" id="hideBelow">
         <label for="hideBelow">Hide Colors Below <span id="contrastBelow">7</span></label>
       </div>
